--- a/assets/slidingheader/layout-simple.css
+++ b/assets/slidingheader/layout-simple.css
@@ -5,6 +5,7 @@
     width: 100%;
     height: 100%;
     background:url(../../images/curtain.jpg) #5E9A18 100% no-repeat;
+    background-size: cover;
     -webkit-transition: -webkit-transform 0.6s;
     transition: transform 0.6s;
     -webkit-transition-timing-function: cubic-bezier(0.7, 0, 0.3, 1);
