--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,7 @@
+body, html {
+    height: 100%;
+}
+
 body {	color:#666;	font:300 15px/15px Roboto,Arial,Helvetica;background-color:#fff;-webkit-font-smoothing:antialiased;background-color: #eee;}
 
 a{color:#5E9A18; text-decoration:none;}
